Refresh a token to get a new pair of tokens.
