# src/token/application/dto/request/refresh-token.request.dto.type.ts
@@ -1,0 +1,9 @@
+
+
+interface RefreshTokenRequestDTO {
+	refreshToken: string
+}
+
+export {
+	RefreshTokenRequestDTO
+};
