# src/token/application/dto/response/index.ts
@@ -1,0 +1,3 @@
+export * from "./refresh-token.response.dto";
+
+export * from "./refresh-token.response.dto.type";
